# crisp-engine

./: CMakeLists.txt  Makefile  README.md  crisp.cpp
src/: constants.h  crispApp.cpp  crispApp.h  window.cpp  window.h
src/util/: logging.cpp  logging.h
